# flight-tracker-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  compose.yaml  render.yaml
apps/api/: Cargo.toml  Dockerfile
apps/api/examples/: ft501_candidate_benchmark.rs  ft502_offline_experiment.rs  ft503_draft_smoke.rs
apps/api/src/: atmosphere.rs  config.rs  health.rs  ingestion.rs  lib.rs  main.rs  metrics.rs  observability.rs  optimization.rs  public_ai_draft.rs  public_attention.rs  public_replay.rs  retention.rs
apps/api/src/alerting/: http.rs  lifecycle.rs  mod.rs  ranking.rs  route_hazard.rs  store.rs  worker.rs
apps/api/src/auth/: audit.rs  http.rs  mod.rs  model.rs  sensitive_write.rs  service.rs  store.rs  token.rs
apps/api/src/domain/: geometry.rs  identity.rs  mod.rs  model.rs
apps/api/src/drafting/: mod.rs  openai.rs
apps/api/src/fleet/: http.rs  mod.rs  projection.rs  types.rs
apps/api/src/live_positions/: adsb_lol.rs  mod.rs  regions.rs  runtime.rs  status.rs
apps/api/src/replay/: engine.rs  mod.rs  runtime.rs  scenario.rs
apps/api/src/retention/: integrity.rs  schedule.rs
apps/api/src/weather/: airport_intelligence.rs  http.rs  mod.rs
apps/api/src/weather/noaa/: client.rs  mod.rs  normalize.rs  runtime.rs  store.rs
apps/api/tests/: public_weather_contract.rs  resilience_drills.rs  route_hazard_golden.rs  route_hazard_postgis_review.rs  schema_contract.rs
migrations/: 20260720000100_bootstrap.sql  20260720000200_canonical_event_model.sql  20260721000100_noaa_weather_ingestion.sql  20260721000200_alert_lifecycle.sql  20260721000300_identity_tenant_isolation.sql  20260721000400_dispatcher_review_queue.sql  20260721000500_alert_assignment_tenant_integrity.sql  20260721000600_retention_deletion_controls.sql  20260721000700_lifecycle_retention_controls.sql  20260721000800_terminal_alert_retention.sql  20260721000900_normalized_fact_retention.sql  20260721001000_retention_schedules.sql  20260721001100_retention_inventory_fingerprints.sql  20260721001200_bounded_sensitive_writes.sql
plans/: ADSBLOL_INTEGRATION.md  ALERT_LIFECYCLE.md  ARCHITECTURE.md  AUDIT_REVIEW_RUNBOOK.md  BACKUP_RESTORE_RUNBOOK.md  CANONICAL_EVENT_MODEL.md  CREDENTIAL_ROTATION_RUNBOOK.md  DATA_LIFECYCLE_INCIDENT_POLICY.md  DECISIONS.md  FLEET_API.md  GIT_WORKFLOW.md  HOSTED_DEPLOYMENT_RUNBOOK.md  IDENTITY_TENANT_ISOLATION.md  NOAA_INGESTION.md  OPERATIONS_CONSOLE.md  OPERATIONS_RUNBOOK.md  OPTIMIZATION_FEASIBILITY.md  PORTFOLIO_DEMO_RUNBOOK.md  PORTFOLIO_DEMO_VALIDATION.md  PRODUCT.md  PROVIDER_FEASIBILITY.md  README.md  REPLAY_SCENARIOS.md  RESILIENCE_DRILLS.md  RETENTION_DELETION_RUNBOOK.md  RISKS.md  ROADMAP.md  ROUTE_HAZARD_RULES.md  SECURITY_FINDINGS.csv  SECURITY_PRIVACY_TRUST_REVIEW.md  STATUS.md  WEATHER_LAYERS.md
scripts/: bootstrap_hosted_portfolio.sql  ft501_candidate_benchmark.py  run_ft402_database_recovery.sh  test_validate_ft301_evidence.py  validate_ft301_evidence.py  (+7 more)
(+183 files in other folders)
